--- a/index.html
+++ b/index.html
@@ -2,12 +2,122 @@
 <html>
 
 <head>
+    <title>ScriBBler</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- TODO: Include Font Awesome file here -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- include css for index.html -->
+    <link href="./styles/common.css" rel="stylesheet">
+    <link href="./styles/index.css" rel="stylesheet">
     <!-- TODO: Include Google Fonts file here -->
+    <link href="https://fonts.googleapis.com/css?family=Montez&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
-    <!-- TODO: Include all your code for the header and home page here -->
+<!-- Insert code for Sign Up, Sign In button here. Add code for "ScriBBler" heading and the sub-heading -->
+<header>
+    <div id="main-container-div">
+        <div class="header">
+            <div class="title-container">
+                <p class="title">ScriBBler</p>
+                <p class="sub-title">Explore, Imagine, Create</p>
+            </div>
+            <div class="login-buttons-container">
+                <!-- signup and signin button -->
+                <button onclick="showSignInModal()" class="blue-button" type="button">Sign In</button>
+                <button onclick="showSignUpModal()" class="blue-button" type="button">Sign Up</button>
+            </div>
+        </div>
+    </div>
+</header>
+<div class="postButtons">
+    <!-- all Posts & Create Post button -->
+    <button onclick="navigateToBlogList()" class="yellow-button" type="button">All posts</button>
+    <button onclick="showCreatePost()" class="yellow-button" type="button">Create post</button>
+</div>
+</div>
+
+<div>
+    <!-- Insert code for Sign In model here -->
+    <div class="modal" id="signin-modal">
+        <div class="modal-content">
+
+            <div class="modal-head">
+
+                <h2 class="modal-title">Welcome Back!<span onclick="hideSignInModal()" id="close"
+                                                           class="close">&times;</span></h2>
+            </div>
+            <hr>
+            <form>
+                <label for="username" class="label-text">Username</label>
+                <input type="text" id="username" placeholder="Enter Username" required>
+                <label for="password" class="label-text">Password</label>
+                <input type="password" id="password" placeholder="Enter Password" required>
+                <button type="submit" onclick="signin(username, password)" class="signin-btn">Sign In</button>
+            </form>
+
+            <p class=bottom-banner>Not a member?<span onclick="hideSignInModal();showSignUpModal()"
+                                                      class=signup>Sign Up</span></p>
+        </div>
+    </div>
+
+</div>
+
+<!-- Insert code for Sign Up modal here -->
+<div>
+    <div class="modal" id="signup-modal">
+        <div class="modal-content">
+
+            <div class="modal-head">
+                <h2 class="modal-title">Get Started<span onclick="hideSignUpModal()" id="close"
+                                                         class="close">&times;</span></h2>
+            </div>
+            <hr>
+            <form>
+                <label for="fullname" class="label-text">Full name</label>
+                <input type="text" id="fullname" placeholder="Enter Full Name" required>
+                <label for="username" class="label-text">Username</label>
+                <input type="text" id="username" placeholder="Enter Username" required>
+                <label for="password" class="label-text">Password</label>
+                <input type="password" id="password" placeholder="Enter Password" required>
+                <label for="confirmpassword" class="label-text">Confirm Password</label>
+                <input type="password" id="confirm_password" placeholder="Confirm Password" required>
+                <button type="submit" onclick="signup(firstName,lastName, email, password, mobile)" class="signin-btn">
+                    Sign up
+                </button>
+            </form>
+        </div>
+    </div>
+</div>
+
+<div>
+    <!-- Insert code for Create Post modal here -->
+    <div class="modal" id="create-post-modal">
+
+        <div class="post-modal-content">
+            <div class="modal-head">
+                <h2 class="modal-title">Pen your post<span onclick="hideCreatePostModal()" id="close" class="close">&times;</span>
+                </h2>
+            </div>
+            <hr>
+            <form id=create-post-form>
+                <label for="tile" class="label-text">Title</label>
+                <input type="text" id="title" placeholder="Enter title of your post" required>
+                <label for="content" class="label-text">Content</label>
+                <textarea cols="50" rows="15" name="post-details" form="create-post-form"
+                          placeholder="Enter the contents of your post here"></textarea>
+                <button type="submit" onclick="createPost()" class="create-btn">Create</button>
+            </form>
+        </div>
+    </div>
+</div>
+
+<!-- Place all Javascript for header in this file -->
+<script src="./scripts/index.js"></script>
+<script src="./scripts/common.js"></script>
+
+
 </body>
 
 </html>
